src/test/ui/generic-associated-types/issue-79636-2.stderr
error[E0107]: missing generics for associated type `SomeTrait::Wrapped`
  --> $DIR/issue-79636-2.rs:5:10
   |
LL |     type Wrapped<A>: SomeTrait;
   |          ^^^^^^^ expected 1 type argument
   |
note: associated type defined here, with 1 type parameter: `A`
  --> $DIR/issue-79636-2.rs:5:10
   |
LL |     type Wrapped<A>: SomeTrait;
   |          ^^^^^^^ -
help: use angle brackets to add missing type argument
   |
LL |     type Wrapped<A><A>: SomeTrait;
   |                 ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
